force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Como_lo_consumio__c.field-meta.xml
<CustomField>
    <fullName>Como_lo_consumio__c</fullName>
    <inlineHelpText>Marcar todas las opciones que apliquen</inlineHelpText>
    <label>Como lo consumio?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cercano a otra formula</fullName>
            </value>
            <value>
                <fullName>Cercano a otro medicamento</fullName>
            </value>
            <value>
                <fullName>Cercano al consumo de otros alimentos</fullName>
            </value>
            <value>
                <fullName>Combinado en preparaciones</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>