force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Como_valora_el_producto_del_tratamiento__c.field-meta.xml
<CustomField>
    <fullName>Como_valora_el_producto_del_tratamiento__c</fullName>
    <label>Como valora el producto del tratamiento?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excelente</fullName>
            </value>
            <value>
                <fullName>Muy bueno</fullName>
            </value>
            <value>
                <fullName>Bueno</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Malo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>