force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Completaste_el_uso_del_kit_de_inicio__c.field-meta.xml
<CustomField>
    <fullName>Completaste_el_uso_del_kit_de_inicio__c</fullName>
    <inlineHelpText>¿Pudiste completar el tratamiento completo del Kit de Inicio?</inlineHelpText>
    <label>¿Completaste el uso del kit de inicio?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>