force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Compra_de_forma_particular__c.field-meta.xml
<CustomField>
    <fullName>Compra_de_forma_particular__c</fullName>
    <label>Compra de forma particular?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>