force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Compra_web_ser_a_beneficioso_para_ud__c.field-meta.xml
<CustomField>
    <fullName>Compra_web_ser_a_beneficioso_para_ud__c</fullName>
    <inlineHelpText>Cree que si pudiera comprar los alimentos por un e-commerce/por web sería beneficioso para ud o su familia?</inlineHelpText>
    <label>Compra web sería beneficioso para ud?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>