force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Comprar_a_a_trav_s_de_un_e_commerce__c.field-meta.xml
<CustomField>
    <fullName>Comprar_a_a_trav_s_de_un_e_commerce__c</fullName>
    <inlineHelpText>Estaría dispuesto a comprar los alimentos directamente a través de un e-commerce?</inlineHelpText>
    <label>Compraría a través de un e-commerce?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>