force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Conoce_las_redes_de_Comunidad_Metabs__c.field-meta.xml
<CustomField>
    <fullName>Conoce_las_redes_de_Comunidad_Metabs__c</fullName>
    <description>¿Conoces nuestras redes de Comunidad Metabólica?</description>
    <label>¿Conoce las redes de Comunidad Metabs?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>