force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Consum_s_suplementos_dietarios__c.field-meta.xml
<CustomField>
    <fullName>Consum_s_suplementos_dietarios__c</fullName>
    <inlineHelpText>¿Consumís suplementos dietarios (vitaminas, minerales, etc)?</inlineHelpText>
    <label>¿Consumís suplementos dietarios?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>