force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Consume_alimentos_aproteicos__c.field-meta.xml
<CustomField>
    <fullName>Consume_alimentos_aproteicos__c</fullName>
    <label>¿Consume alimentos aproteicos?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si, habitualmente</fullName>
            </value>
            <value>
                <fullName>Si, esporádicamente</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>