force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Consume_alimentos_hipoproteicos_de_otra__c.field-meta.xml
<CustomField>
    <fullName>Consume_alimentos_hipoproteicos_de_otra__c</fullName>
    <label>¿Consume alimentos hipoproteicos de otra</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>