force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Consume_complementos__c.field-meta.xml
<CustomField>
    <fullName>Consume_complementos__c</fullName>
    <inlineHelpText>Vitaminas, mediación, etc</inlineHelpText>
    <label>¿Consume complementos?</label>
    <type>TextArea</type>
</CustomField>