force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Consume_en_la_actualidad_algun_GMP_Glic__c.field-meta.xml
<CustomField>
    <fullName>Consume_en_la_actualidad_algun_GMP_Glic__c</fullName>
    <inlineHelpText>Consume en la actualidad algun GMP /Glicomacropeptido?</inlineHelpText>
    <label>Consume algun GMP /Glicomacropeptido?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>