force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Consume_formula_en_formatos_para_llevar__c.field-meta.xml
<CustomField>
    <fullName>Consume_formula_en_formatos_para_llevar__c</fullName>
    <label>Consume formula en formatos para llevar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>