force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Consume_informaci_n_de_redes__c.field-meta.xml
<CustomField>
    <fullName>Consume_informaci_n_de_redes__c</fullName>
    <label>¿Consume información de redes?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si, regularmente</fullName>
            </value>
            <value>
                <fullName>Si, a veces</fullName>
            </value>
            <value>
                <fullName>Casi nunca</fullName>
            </value>
            <value>
                <fullName>No, no consume y no le interesa</fullName>
            </value>
            <value>
                <fullName>No, no consume pero le interesaría</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>