force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Consume_Loprofin__c.field-meta.xml
<CustomField>
    <fullName>Consume_Loprofin__c</fullName>
    <label>Consume Loprofin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>