force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Consume_Loprofin_vs__c.field-meta.xml
<CustomField>
    <fullName>Consume_Loprofin_vs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consume Loprofin</label>
    <type>Checkbox</type>
</CustomField>