force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Consume_otros_alimentos_hipoproteicos__c.field-meta.xml
<CustomField>
    <fullName>Consume_otros_alimentos_hipoproteicos__c</fullName>
    <inlineHelpText>Consume alimentos hipoproteicos de otras marcas (no Nutricia)? (Tal vez antes no consumia productos Nutricia)</inlineHelpText>
    <label>Consume otros alimentos hipoproteicos?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>