force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Consume_productos_de_la_l_nea_Loprofin__c.field-meta.xml
<CustomField>
    <fullName>Consume_productos_de_la_l_nea_Loprofin__c</fullName>
    <label>¿Consume productos de la línea Loprofin?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>