force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Consumen_una_sola_f_rmula_o_utilizan_un__c.field-meta.xml
<CustomField>
    <fullName>Consumen_una_sola_f_rmula_o_utilizan_un__c</fullName>
    <label>¿Consumen una fórmula o mix de formulas?</label>
    <type>TextArea</type>
</CustomField>