force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Consumis_unicamente_GMP__c.field-meta.xml
<CustomField>
    <fullName>Consumis_unicamente_GMP__c</fullName>
    <label>Consumis unicamente GMP?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Consume_en_la_actualidad_algun_GMP_Glic__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>