force-app/main/default/objects/Formulario_MarketingCloud__c/fields/consumiste_en_algun_momento_de_tu_vida__c.field-meta.xml
<CustomField>
    <fullName>consumiste_en_algun_momento_de_tu_vida__c</fullName>
    <inlineHelpText>En el caso que NO consuma alimentos actualmente (ni de nutricia y competencia)</inlineHelpText>
    <label>consumiste en algun momento de tu vida?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>