force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Contanos_m_s__c.field-meta.xml
<CustomField>
    <fullName>Contanos_m_s__c</fullName>
    <label>Contanos más:</label>
    <type>TextArea</type>
</CustomField>