force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Continua_ahora_con_el_sop_nutricional__c.field-meta.xml
<CustomField>
    <fullName>Continua_ahora_con_el_sop_nutricional__c</fullName>
    <description>¿Continua con el soporte nutricional actualmente?</description>
    <inlineHelpText>¿Continua con el soporte nutricional actualmente?</inlineHelpText>
    <label>¿Continua ahora con el sop. nutricional?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>