force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Continua_con_el_tratamiento__c.field-meta.xml
<CustomField>
    <fullName>Continua_con_el_tratamiento__c</fullName>
    <label>Continua con el tratamiento?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>