force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Continua_consumiendo_el_producto__c.field-meta.xml
<CustomField>
    <fullName>Continua_consumiendo_el_producto__c</fullName>
    <label>Continua consumiendo el producto?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>