force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Convulsiones_por__c.field-meta.xml
<CustomField>
    <fullName>Convulsiones_por__c</fullName>
    <label>Convulsiones por</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Día</fullName>
            </value>
            <value>
                <fullName>Semana</fullName>
            </value>
            <value>
                <fullName>Mes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>