force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Convulsiones_promedio_por_dia_ahora__c.field-meta.xml
<CustomField>
    <fullName>Convulsiones_promedio_por_dia_ahora__c</fullName>
    <inlineHelpText>¿Cúantas convulsiones presenta en promedio por dia ahora que se encuentra en tratamiento?</inlineHelpText>
    <label>Convulsiones promedio por día ahora</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>