force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cree_que_si_pudiera_comprar__c.field-meta.xml
<CustomField>
    <fullName>Cree_que_si_pudiera_comprar__c</fullName>
    <label>Cree que si pudiera comprar</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
            <value>
                <fullName>NO LO SÉ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>