force-app/main/default/objects/Formulario_MarketingCloud__c/fields/CSAT_Valoraci_n_del_servicio_de_entrega__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Valoraci_n_del_servicio_de_entrega__c</fullName>
    <label>CSAT: Valoración del servicio de entrega</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Totalmente satisfecho</fullName>
            </value>
            <value>
                <fullName>Muy satisfecho</fullName>
            </value>
            <value>
                <fullName>Satisfecho</fullName>
            </value>
            <value>
                <fullName>Nada Satisfecho</fullName>
            </value>
            <value>
                <fullName>Muy Insatisfecho</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>