force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cu_1_l__c.field-meta.xml
<CustomField>
    <fullName>Cu_1_l__c</fullName>
    <label>Cuál?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PKU Sphere</fullName>
            </value>
            <value>
                <fullName>Glyctatin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>