force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cu_a_l__c.field-meta.xml
<CustomField>
    <fullName>Cu_a_l__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuál?</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Formularios MarketingCloud (Cuál&apos;)</relationshipLabel>
    <relationshipName>Formularios_MarketingCloud5</relationshipName>
    <type>Lookup</type>
</CustomField>