force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cu_l1__c.field-meta.xml
<CustomField>
    <fullName>Cu_l1__c</fullName>
    <label>Cuál?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Consume_en_la_actualidad_algun_GMP_Glic__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GMPro Liquido</fullName>
            </value>
            <value>
                <fullName>PKU Sphere</fullName>
            </value>
            <value>
                <fullName>Glyctatin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>