force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cu_l__c.field-meta.xml
<CustomField>
    <fullName>Cu_l__c</fullName>
    <label>¿Cuál?</label>
    <length>90</length>
    <type>Text</type>
</CustomField>