force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cu_l_es__c.field-meta.xml
<CustomField>
    <fullName>Cu_l_es__c</fullName>
    <label>¿Cuál es?</label>
    <type>TextArea</type>
</CustomField>