force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cu_l_es_la_f_rmula_de_su_tratamiento1__c.field-meta.xml
<CustomField>
    <fullName>Cu_l_es_la_f_rmula_de_su_tratamiento1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>¿Cuál es la fórmula de su tratamiento?</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3 OR 4 OR 5</booleanFilter>
        <filterItems>
            <field>Product2.Name</field>
            <operation>equals</operation>
            <value>Neocate Junior Vainilla</value>
        </filterItems>
        <filterItems>
            <field>Product2.Name</field>
            <operation>equals</operation>
            <value>Neocate Gold</value>
        </filterItems>
        <filterItems>
            <field>Product2.Name</field>
            <operation>equals</operation>
            <value>Neocate Junior Neutro</value>
        </filterItems>
        <filterItems>
            <field>Product2.Name</field>
            <operation>equals</operation>
            <value>NEOCATE INFANT SYNEO LATA x 400G</value>
        </filterItems>
        <filterItems>
            <field>Product2.Name</field>
            <operation>equals</operation>
            <value>NEOCATE SYNEO LATA x 400G</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Formularios MarketingCloud (¿Cuál es la fórmula de su tratamiento?)</relationshipLabel>
    <relationshipName>Formularios_MarketingCloud</relationshipName>
    <type>Lookup</type>
</CustomField>