force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cu_l_es_la_f_rmula_de_su_tratamiento__c.field-meta.xml
<CustomField>
    <fullName>Cu_l_es_la_f_rmula_de_su_tratamiento__c</fullName>
    <label>¿Cuál es la fórmula de su tratamiento?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Neocate Gold</fullName>
            </value>
            <value>
                <fullName>Neocate Infant Syneo</fullName>
            </value>
            <value>
                <fullName>Neocate Junior Neutro</fullName>
            </value>
            <value>
                <fullName>Neocate Junior Vainilla</fullName>
            </value>
            <value>
                <fullName>Nutrilon Pepti</fullName>
            </value>
            <value>
                <fullName>Nutrilon Pepti Syneo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>