force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cu_l_es_la_formula_que_suele_consumir__c.field-meta.xml
<CustomField>
    <fullName>Cu_l_es_la_formula_que_suele_consumir__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>¿Cuál es la formula que suele consumir?</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Formularios Marketing Cloud (¿Cuál es la formula que suele consumir?)</relationshipLabel>
    <relationshipName>Formularios_Marketing_Cloud1</relationshipName>
    <type>Lookup</type>
</CustomField>