force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cu_l_es_la_mayor_traba_dificultad_a_l__c.field-meta.xml
<CustomField>
    <fullName>Cu_l_es_la_mayor_traba_dificultad_a_l__c</fullName>
    <label>Cuál es la mayor traba/ dificultad a l</label>
    <type>TextArea</type>
</CustomField>