force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cu_l_es_la_profundidad_de_sue_o__c.field-meta.xml
<CustomField>
    <fullName>Cu_l_es_la_profundidad_de_sue_o__c</fullName>
    <label>¿Cuál es la profundidad de sueño?</label>
    <type>TextArea</type>
</CustomField>