force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cu_l_ha_sido_su_experiencia_con_el_reti__c.field-meta.xml
<CustomField>
    <fullName>Cu_l_ha_sido_su_experiencia_con_el_reti__c</fullName>
    <label>¿Cuál ha sido su experiencia con el reti</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excelente</fullName>
            </value>
            <value>
                <fullName>Muy buena</fullName>
            </value>
            <value>
                <fullName>Buena</fullName>
            </value>
            <value>
                <fullName>Mala</fullName>
            </value>
            <value>
                <fullName>Muy Mala</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>