force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cu_les__c.field-meta.xml
<CustomField>
    <fullName>Cu_les__c</fullName>
    <inlineHelpText>Si la respuesta a &quot;La OS le cubre la formula?&quot; fue &quot;SI&quot;, contestar esta pregunta</inlineHelpText>
    <label>¿Cuáles?</label>
    <length>25</length>
    <type>Text</type>
</CustomField>